--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!-- Title -->
-  <title>Angular App</title>
+    <!-- Title -->
+    <title>Angular App</title>
 
-  <base href="/">
+    <base href="/">
 
-  <!-- Meta Tags-->
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="">
+    <!-- Meta Tags-->
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Petr Nikolas">
+    <meta http-equiv="Content-language" content="en">
+    <meta name='reply-to' content='petr.nikolas@icloud.com'>
+    <meta name='url' content=''>
+    <meta name='identifier-URL' content=''>
 
-  <!-- OG Meta Tags-->
-  <meta property="og:title" content="Angular App">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:type" content="website">
-  <!-- End OG Meta Tags-->
+    <!-- OG Meta tags -->
+    <meta property="og:title" content="Angular App">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Twitter Meta tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="">
 
-  <!-- CSS-->
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css' />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- MS Application -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- CSS-->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css' />
 </head>
+
 <body>
 
-  <!-- Root of a Apps with Loader -->
-  <app-root>
+    <!-- Root of a Apps with Loader -->
+    <app-root>
 
-    <!-- Loader -->
-    <div id="loader">
-      <div class="loader"></div>
-    </div>
-    <!-- End Loader -->
+        <!-- Loader -->
+        <div id="loader">
+            <div class="loader"></div>
+        </div>
 
-  </app-root>
-  <!-- End Root of a Apps with Loader -->
+    </app-root>
 
 </body>
+
 </html>
