--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Title -->
-    <title>Angular App</title>
+    <title>Marley</title>
 
     <base href="/">
 
@@ -20,7 +20,7 @@
     <meta name='identifier-URL' content=''>
 
     <!-- OG Meta tags -->
-    <meta property="og:title" content="Angular App">
+    <meta property="og:title" content="Marley">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <meta property="og:type" content="website">
