--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Modern Angular 6+ Stack.">
     <meta name="author" content="Petr Nikolas">
     <meta http-equiv="Content-language" content="en">
-    <meta name='reply-to' content='petr.nikolas@icloud.com'>
+    <meta name='reply-to' content='hello@petrnikolas.com'>
     <meta name='url' content=''>
     <meta name='identifier-URL' content=''>
 
