added prettier, stylelint and gitlab-ci files

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Marley</title>
+    <title>Marley.js</title>
 
     <base href="/">
 
@@ -19,7 +19,7 @@
     <meta name='identifier-URL' content=''>
 
     <!-- OG Meta tags -->
-    <meta property="og:title" content="Marley">
+    <meta property="og:title" content="Marley.js">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <meta property="og:type" content="website">
