new loader/spinner

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,10 @@
     <app-root>
         <!-- Loader -->
         <div id="loader">
-            <div class="loader"></div>
+            <div class="spinner">
+                <div class="dot1"></div>
+                <div class="dot2"></div>
+            </div>
         </div>
     </app-root>
 </body>
