--- a/apps/admin/src/index.html
+++ b/apps/admin/src/index.html
@@ -42,7 +42,7 @@
 
 <body>
     <!-- Root of a Apps with Loader -->
-    <app-root>
+    <marleyjs-root>
         <!-- Loader -->
         <div id="loader">
             <div class="spinner">
@@ -50,6 +50,6 @@
                 <div class="dot2"></div>
             </div>
         </div>
-    </app-root>
+    </marleyjs-root>
 </body>
 </html>
