--- a/apps/admin/src/index.html
+++ b/apps/admin/src/index.html
@@ -4,40 +4,39 @@
     <!-- Title -->
     <title>Admin | Marley.js</title>
 
-    <base href="/">
+    <base href="/" />
 
     <!-- Meta Tags-->
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <meta name="description" content="Modern Angular 6+ Stack.">
-    <meta name="author" content="Petr Nikolas">
-    <meta http-equiv="Content-language" content="en">
-    <meta name='reply-to' content='hello@petrnikolas.com'>
-    <meta name='url' content=''>
-    <meta name='identifier-URL' content=''>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Modern Angular 6+ Stack." />
+    <meta name="author" content="Petr Nikolas" />
+    <meta http-equiv="Content-language" content="en" />
+    <meta name='reply-to' content='hello@petrnikolas.com' />
+    <meta name='url' content='' />
+    <meta name='identifier-URL' content='' />
 
     <!-- OG Meta tags -->
-    <meta property="og:title" content="Marley.js">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="">
-    <meta property="og:site_name" content="">
+    <meta property="og:title" content="Marley.js" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="" />
+    <meta property="og:site_name" content="" />
 
     <!-- Twitter Meta tags -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="" />
+    <meta name="twitter:description" content="" />
+    <meta name="twitter:image" content="" />
 
     <!-- MS Application -->
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="">
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
